@@ -192,6 +192,7 @@ Eli Zaretskii                       eliz@is.elta.co.il
 Emile LeBlanc                       leblanc@math.toronto.edu
 Emmanuel Lacour                     elacour@home-dn.net
 Eric Backus                         ericb@lsid.hp.com
+Eric Bergen                         eric.bergen@gmail.com
 Eric G. Miller                      egm2@jps.net
 Eric Pemente                        pemente@northpark.edu
 Eric S. Raymond                     esr@snark.thyrsus.com
